--- a/bazarr/Dockerfile
+++ b/bazarr/Dockerfile
@@ -3,7 +3,9 @@ FROM --platform=amd64 cloudron/base:4.2.0@sha256:46da2fffb36353ef714f97ae8e962bd
 RUN apt-get update -y && \
     apt install -y curl sqlite3 dpkg 7zip python3-dev python3-pip python3-distutils unrar unzip
 
-RUN mkdir -p /app/code/readarr
+# Create necessary directories in /app/config
+RUN mkdir -p /app/config/data /app/config/logs /app/config/config
+
 WORKDIR /app/code
 
 RUN wget --content-disposition "https://github.com/morpheus65535/bazarr/releases/latest/download/bazarr.zip" && \
@@ -14,6 +16,6 @@ RUN cd /app/code/bazarr && \
     python3 -m pip install -r requirements.txt
 
 COPY start.sh /app/code/
-RUN chown -R cloudron:cloudron /app/code/bazarr
+RUN chown -R cloudron:cloudron /app/code/bazarr /app/config
 
 CMD [ "/app/code/start.sh" ]
